fixes some issues with particle model attachments
seems the vanilla rendering coordinate system has changed again...